--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <!-- Your HTML here -->
-        <script src="index.js" type="module"></script>
-    </body>
+  <head>
+    <!-- META -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- STYLES -->
+    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Big+Shoulders:opsz,wght@10..72,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Your HTML here -->
+    <header class="hero">
+      <img
+        src="/assets/parrot.png"
+        alt="Picture of a cute, happy and friendly parrot."
+      />
+      <div class="hero__info">
+        <h1>PollyGlot</h1>
+        <p>Perfect Translation Every Time</p>
+      </div>
+    </header>
+
+    <main></main>
+
+    <script src="/scripts/index.js" type="module" defer></script>
+  </body>
 </html>
