--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="/styles/index.css" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +36,14 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="messages" id="messages">
+        <h2 class="message system">
+          Select the language you me to translate into, type your text and hit
+          send!
+        </h2>
+      </section>
+    </main>
 
     <script src="/scripts/index.js" type="module" defer></script>
   </body>
