--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- META -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="App that translates text using ChatGPT into other languages"
+    />
+    <title>ChatGPT Translator</title>
     <!-- STYLES -->
     <link rel="stylesheet" href="/styles/index.css" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
@@ -11,24 +16,41 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      media="print"
+      onload="this.media='all'"
+      integrity="sha512-..."
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Big+Shoulders:opsz,wght@10..72,100..900&display=swap"
-      rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
     />
   </head>
   <body>
     <!-- Your HTML here -->
     <header class="hero">
       <img
-        src="/assets/parrot.png"
+        src="/parrot.png"
         alt="Picture of a cute, happy and friendly parrot."
+        fetchpriority="high"
+        loading="eager"
       />
       <div class="hero__info">
         <h1>PollyGlot</h1>
@@ -44,7 +66,6 @@
         </h2>
       </section>
     </main>
-
     <script src="/scripts/index.js" type="module" defer></script>
   </body>
 </html>
